Fix filter buttons too close together

--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -26,7 +26,7 @@ body {
 
 .filter-buttons {
   margin-bottom: 2.5em;
-  line-height: 2.5em;
+  line-height: 3em;
   text-align: center;
 }
 
